# Paper-Soccer

./: .gitignore  CMakeLists.txt  Paper Soccer.cpp  Paper Soccer.h  Paper Soccer.kdev4  README  README.md  main.cpp
src/: CMakeLists.txt
src/ps/: ai.cpp  ai.hpp  application.cpp  application.hpp  either.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  maybe.hpp  shape.hpp
src/ps/controllers/: controller.hpp  editorcontroller.cpp  editorcontroller.hpp  gameconfigcontroller.cpp  gameconfigcontroller.hpp  gamecontroller.cpp  gamecontroller.hpp  welcomecontroller.cpp  welcomecontroller.hpp
src/ps/logic/: board.cpp  board.hpp  direction.cpp  direction.hpp  edge.cpp  edge.hpp  move-old  move.cpp  move.hpp  point.cpp  point.hpp
src/ps/model/: board.cpp  board.hpp  direction.cpp  direction.hpp  edge.cpp  edge.hpp  history.cpp  history.hpp
src/ps/models/: board.cpp  board.hpp  direction.cpp  direction.hpp  edge.cpp  edge.hpp  gameconfig.cpp  gameconfig.hpp  history.cpp  history.hpp  recentlysaved.cpp  recentlysaved.hpp
src/ps/resources/: .directory  resources.qrc
src/ps/views/: boardview.cpp  boardview.hpp  editorview.cpp  editorview.hpp  editorview.ui  evenspinbox.cpp  evenspinbox.hpp  gameconfig.ui  gameconfigview.cpp  gameconfigview.hpp  gameview.cpp  gameview.hpp  gameview.ui  historyview.cpp  historyview.hpp  historyviewitem.cpp  historyviewitem.hpp  mainwindow.cpp  mainwindow.hpp  playerswitch.cpp  playerswitch.hpp  welcomeview.cpp  welcomeview.hpp
src/res/images/: .directory
svgs/: .directory
